Fix bugs and wrap up component implementation

--- a/src/components/Basic/Keybinds/Keybinds.module.scss
+++ b/src/components/Basic/Keybinds/Keybinds.module.scss
@@ -7,4 +7,8 @@
     display: flex;
     align-items: center;
     justify-content: center;
+
+    &:hover {
+        border-color: rgba($primaryColor, 0.75);
+    }
 }
